# cpp-graphics-lib

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  base64_8hpp_source.html  classcppgfx_1_1App-members.html  classcppgfx_1_1App.html  classcppgfx_1_1App.js  classes.html  cppgfx_8hpp_source.html  data_8hpp_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5ac5a59fbd44dd892fdd50dc9e13f639.html  dir_5ac5a59fbd44dd892fdd50dc9e13f639.js  dir_953ac13dcbfb3e70ef6edb1a0956b929.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  genindex.html  group__Events.html  group__Events.js  group__Graphics.html  group__Graphics.js  group__Input.html  group__Input.js  group__InputDevices.html  group__InputDevices.js  group__Maths.html  group__Output.html  group__Output.js  group__System.html  group__Timing.html  group__Timing.js  group__Window.html  group__Window.js  (+17 more)
.cache/clangd/index/: base64.cpp.20600D6F62C13B53.idx  base64.cpp.544A58CA818D6BEC.idx  base64.hpp.20CF8D9615E38E47.idx  base64.hpp.8662E4D6836CDB1B.idx  cppgfx.cpp.799880FB8FE6BDDD.idx  cppgfx.cpp.92209035844BB1E7.idx  cppgfx.hpp.25BC5E3B073E2A42.idx  cppgfx.hpp.70047B464412DF07.idx  data.cpp.A50504810203602E.idx  data.cpp.A7A0C25F591987ED.idx  data.hpp.C1DEF0BC68AB7679.idx  data.hpp.EA051403E79733E0.idx  main.cpp.B015F11E26F711C2.idx  main.cpp.E5D91D2FE34C7708.idx  robotofont.hpp.2B488FE94FED9EF3.idx  robotofont.hpp.BE0769A81FD20A92.idx  win32.cpp.6A229F3FDCFD9F34.idx  win32.cpp.7857AE98E6F7C9B1.idx  win32.hpp.75A6D798D8E36EC5.idx  win32.hpp.A22B67559BE290E5.idx
.github/workflows/: docs.yml
.nvim/: session
cmake/: deps.cmake
docs/: CMakeLists.txt  Doxyfile.in  header.html
docs/markdown/: concepts.md  faq.md  gettingstarted.md  mainpage.md
docs/source/: conf.py  index.rst
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cpp
include/: cppgfx.hpp  win32.hpp
include/cppgfx/: base64.hpp  cppgfx.hpp  data.hpp  robotofont.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  groups_0.js  (+18 more)
src/: base64.cpp  cppgfx.cpp  data.cpp  win32.cpp
